<resources>
    <string name="app_name">Similar Japanese KANA</string>

    <string name="blank">"　"</string>

    <string name="hiragana">"Hiragana"</string>
    <string name="katakana">"Katakana"</string>
    <string name="mixture">"Mixture"</string>

    <string name="play_title">"Spot the difference"</string>

    <string name="instruction">Find a mistake!</string>
    <string name="next_question">Next</string>
    <string name="goal_achievement">How fast it is!\nIt is the fastest of all</string>
    <string name="goal_achievement2">Congrats %1$d play!\nGoal achievement!</string>

    <string name="play_count">play_count</string>
    <string name="max_time">max_time</string>
    <string name="time_attack">Time Attack</string>

    <!--メイン画面で戻るボタンを押下したときのメッセージ-->
    <string name="final_title">Exit menu</string>
    <string name="final_message">Do you want to exit the application?</string>
    <string name="final_ok">Exit</string>
    <string name="final_cancel">Cancel</string>

    <!--月が開けて前回までの記録がクリアされるときのメッセージ-->
    <string name="next_title">Result</string>
    <string name="next_title1">So far high scores</string>
    <string name="next_title2">Previous score</string>
    <string name="next_message1">Let\'s work hard this month!</string>
    <string name="next_message2">Congrats!\nIt\'s a record update!\nIt\'s the best the previous record!</string>
    <string name="next_ok">OK</string>

    <string name="time_attack_title1">Time Attack</string>
    <string name="time_attack_title2">Result announcement</string>
    <string name="time_attack_message1">Let\'s challenge how much you can find the mistake within 30 seconds!</string>
    <string name="time_attack_message2">You ware able to find %1$d mistake.</string>
    <string name="time_attack_message3">This time is the highest record ever.</string>
    <string name="time_attack_ok">OK</string>
    <string name="time_attack_cancel">Cancel</string>

    <string name="close">End</string>
    <string name="dashboard">Record</string>
    <string name="reset">Reset</string>

    <string name="confirm">confirm</string>
    <string name="confirm_message">You are about to reset the record.\nCan you really reset?</string>

    <string name="min">0</string>
    <string name="max">50</string>

    <string name="dashboard_title">Level %1$d : %2$d more play</string>
    <string name="desc_result">Record : %1$d play</string>

    <string name="record_max_time">Fastest answer time so far</string>
    <string name="record_max_time_score">%1$s(ss.mmm)</string>
    <string name="record_time_attack">Best Record of time attack</string>
    <string name="record_time_attack_score">%1$d(times/30sec)</string>

    <string name="count_timeattack">count_timeattack</string>
    <string name="count_induce">count_induce</string>

    <string name="induce_title">Thank you for always using this App</string>
    <string name="induce_message">I would be pleased if you could evaluate it and comments, if you have any requests or dissatisfaction about usability and specifications.\nI look forward to working with you.</string>
    <string name="induce_ok">Evaluate</string>
    <string name="induce_cancel">Later</string>

    <string name="adUnitId">ca-app-pub-1485554329820885/5580836655</string>
    <string name="adUnitInterId">ca-app-pub-1485554329820885/2349888250</string>
    <string name="adUnitTestId">ca-app-pub-3940256099942544/6300978111</string>
</resources>
